Removed: -yarn.lock
Updated:
-Dockerfile - lib replaced to dist
-tsconfig - changed directories from lib to dist
-package.json - added rimraf, locked versions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "esModuleInterop": true,
     "module": "commonjs",
     "moduleResolution": "node",
-    "outDir": "./lib",
+    "outDir": "./dist",
     "resolveJsonModule": true,
     "strict": true,
     "target": "ES2019"
@@ -15,7 +15,7 @@
     "integration-tests/**/*.ts"
   ],
   "exclude": [
-    "lib"
+    "dist"
   ],
   "files": [
     "global.d.ts"
