--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lib"
   ],
   "scripts": {
-    "build": "rm -rf lib && tsc --emitDeclarationOnly --project tsconfig.build.json && esbuild $(find src -name '*.ts' ! -name '*.test.ts' ! -path '*/__tests__/*') --outdir=lib --platform=node --target=node14 --format=cjs && cp -r src/keys lib/keys",
+    "clean": "rimraf lib",
+    "build": "npm run clean && tsc --emitDeclarationOnly --project tsconfig.build.json && esbuild $(find src -name '*.ts' ! -name '*.test.ts' ! -path '*/__tests__/*') --outdir=lib --platform=node --target=node14 --format=cjs && cp -r src/keys lib/keys",
     "format": "prettier --write src/**/*.ts integration-tests/**/*.ts",
     "integration-test": "jest --config integration-tests/jest.config.js",
     "integration-test:watch": "jest --config integration-tests/jest.config.js --watch",
@@ -49,12 +50,13 @@
     "eslint-config-prettier": "^6.15.0",
     "husky": "^7.0.4",
     "jest": "^27.4.3",
-    "jest-extended": "^3.0.1",
     "jest-date-mock": "^1.0.8",
+    "jest-extended": "^3.0.1",
     "lint-staged": "^10.1.3",
     "markdown-toc": "^1.2.0",
     "nodemon": "^2.0.3",
     "prettier": "^2.5.1",
+    "rimraf": "4.1.1",
     "semantic-release": "^19.0.3",
     "supertest": "^6.1.6",
     "ts-node": "^10.4.0",
