--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "format": "prettier --write src/**/*.ts tests/**/*.ts",
-    "build": "tsc",
-    "buildOLD": "tsc --emitDeclarationOnly --project tsconfig.build.json && esbuild $(find src -name '*.ts' ! -name '*.test.ts' ! -path '*/__tests__/*') --outdir=dist --platform=node --target=node14 --format=cjs && cp -r src/keys lib/keys",
+    "build": "tsc --p tsconfig.build.json",
     "integration-test": "jest --config integration-tests/jest.config.js",
     "integration-test:watch": "jest --config integration-tests/jest.config.js --watch",
     "lint": "eslint --cache src/**/*.ts && tsc --noEmit",
@@ -25,46 +24,31 @@
     "semantic-release": "semantic-release"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.16.0",
-    "@commitlint/cli": "^15.0.0",
-    "@commitlint/config-conventional": "^15.0.0",
-    "@jest/globals": "^27.4.3",
-    "@semantic-release/changelog": "^6.0.1",
-    "@semantic-release/exec": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/npm": "^9.0.0",
-    "@types/aws-lambda": "^8.10.85",
-    "@types/body-parser": "^1.19.0",
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.13",
-    "@types/jest": "^25.2.1",
-    "@types/jsonwebtoken": "^8.5.6",
-    "@types/lodash.mergewith": "^4.6.6",
-    "@types/node": "^18.11.18",
-    "@types/supertest": "^2.0.11",
-    "@types/uuid": "^8.3.3",
-    "@typescript-eslint/eslint-plugin": "^2.27.0",
-    "@typescript-eslint/parser": "^2.27.0",
-    "esbuild": "^0.14.2",
-    "esbuild-jest": "^0.5.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.15.0",
-    "jest": "^27.4.3",
-    "jest-date-mock": "^1.0.8",
-    "jest-extended": "^3.0.1",
-    "lint-staged": "^10.1.3",
-    "markdown-toc": "^1.2.0",
-    "nodemon": "^2.0.3",
-    "prettier": "^2.5.1",
+    "@babel/preset-typescript": "7.18.6",
+    "@types/aws-lambda": "8.10.109",
+    "@types/body-parser": "1.19.2",
+    "@types/cors": "2.8.13",
+    "@types/express": "4.17.15",
+    "@types/jsonwebtoken": "9.0.1",
+    "@types/lodash.mergewith": "4.6.7",
+    "@types/node": "18.11.18",
+    "@types/supertest": "2.0.12",
+    "@types/uuid": "9.0.0",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
+    "@typescript-eslint/parser": "5.48.2",
+    "eslint": "8.32.0",
+    "eslint-config-prettier": "8.6.0",
+    "jest": "29.3.1",
+    "nodemon": "2.0.20",
+    "prettier": "2.8.3",
     "rimraf": "4.1.1",
-    "semantic-release": "^19.0.3",
-    "supertest": "^6.1.6",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.2"
+    "supertest": "6.3.3",
+    "ts-node": "10.9.1",
+    "typescript": "4.5.2"
   },
   "dependencies": {
     "@aws-crypto/client-node": "3.1.1",
-    "aws-lambda": "^1.0.7",
+    "aws-lambda": "1.0.7",
     "aws-sdk": "2.1297.0",
     "body-parser": "1.20.1",
     "boxen": "5.1.2",
