--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "rimraf": "4.1.1",
     "supertest": "6.3.3",
     "ts-node": "10.9.1",
-    "typescript": "4.5.2"
+    "typescript": "4.9.4"
   },
   "dependencies": {
     "@aws-crypto/client-node": "3.1.1",
@@ -74,12 +74,12 @@
       "src"
     ],
     "ext": "ts",
-    "exec": "yarn start"
+    "exec": "npm run start"
   },
   "lint-staged": {
     "*.ts": [
       "eslint --fix --cache",
-      "tsc --target es2019 --moduleResolution node --esModuleInterop --resolveJsonModule --noEmit ./setupTests.ts",
+      "tsc --target es2021 --moduleResolution node --esModuleInterop --resolveJsonModule --noEmit ./setupTests.ts",
       "prettier --write"
     ],
     "README.md": "markdown-toc -i --bullets=- --maxdepth=3"
