--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build": "tsc --p tsconfig.build.json",
     "integration-test": "jest --config integration-tests/jest.config.js",
     "integration-test:watch": "jest --config integration-tests/jest.config.js --watch",
-    "lint": "eslint --cache src/**/*.ts && tsc --noEmit",
+    "lint": "eslint \"{src}/**/*.ts\"",
+    "lint:fix": "eslint \"{src}/**/*.ts\" --fix",
     "start:dev": "cross-env COGNITO_LOCAL_DEVMODE=1 ts-node src",
     "start:prod": "node dist/index.js",
     "start:debug": "cross-env COGNITO_LOCAL_DEVMODE=1 DEBUG=1 node -r ts-node/register --inspect=9230 --enable-source-maps src/bin/start.ts",
@@ -28,6 +29,7 @@
     "@types/body-parser": "1.19.2",
     "@types/cors": "2.8.13",
     "@types/express": "4.17.15",
+    "@types/jest": "29.2.6",
     "@types/jsonwebtoken": "9.0.1",
     "@types/lodash.mergewith": "4.6.7",
     "@types/node": "18.11.18",
@@ -37,6 +39,7 @@
     "@typescript-eslint/parser": "5.48.2",
     "eslint": "8.32.0",
     "eslint-config-prettier": "8.6.0",
+    "eslint-plugin-unused-imports": "2.0.0",
     "jest": "29.3.1",
     "nodemon": "2.0.20",
     "prettier": "2.8.3",
