--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "start:debug": "cross-env COGNITO_LOCAL_DEVMODE=1 DEBUG=1 node -r ts-node/register --inspect=9230 --enable-source-maps src",
     "start:watch": "nodemon",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "devDependencies": {
     "@babel/preset-typescript": "7.18.6",
@@ -42,10 +45,12 @@
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-unused-imports": "2.0.0",
     "jest": "29.3.1",
+    "jest-extended": "3.2.3",
     "nodemon": "2.0.20",
     "prettier": "2.8.3",
     "rimraf": "4.1.1",
     "supertest": "6.3.3",
+    "ts-jest": "29.0.3",
     "ts-node": "10.9.1",
     "typescript": "4.9.4"
   },
@@ -93,5 +98,29 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/jagregory/cognito-local.git"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "roots": ["<rootDir>/src"],
+    "setupFiles": [],
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupTests.ts",
+      "jest-extended/all"
+    ],
+    "testMatch": [
+      "**/*.test.ts"
+    ],
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
   }
 }
