UPD: .gitignore, package.json, tsconfig

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "build": "tsc --p tsconfig.build.json",
     "integration-test": "jest --config integration-tests/jest.config.js",
     "integration-test:watch": "jest --config integration-tests/jest.config.js --watch",
-    "lint": "eslint \"{src}/**/*.ts\"",
-    "lint:fix": "eslint \"{src}/**/*.ts\" --fix",
+    "lint": "eslint \"{src, tests}/**/*.ts\"",
+    "lint:fix": "eslint \"{src, tests}/**/*.ts\" --fix",
     "start": "ts-node src",
     "start:dev": "cross-env COGNITO_LOCAL_DEVMODE=1 ts-node src",
     "start:prod": "node dist/index.js",
